syntax = "proto2";
package msg;
import "serialize.proto";


// 发送玩家事件列表
message GW2C_SendUserEvents {
    optional UserMapEvent event = 1;
}

// 进入激活事件
message C2GW_ReqEnterEvents {
    optional int64 uid = 1;
}

// 移除事件
message GW2C_RemoveEvent {
    optional int64 uid = 1;
}

// 关闭事件，例如关闭商店界面
message C2GW_LeaveEvent {
    optional int64 uid = 1;
}

// 服务器通知进入游戏事件
message GW2C_EnterGameEvent {
    optional int64 uid = 1;
}


