// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: MapEventBase
message MapEventBase
{	
	
	
	repeated TMapEventDefine TMapEvent = 1; // TMapEvent

}

// Defined in table: TMapEvent
message TMapEventDefine
{	
	
	
	optional int32 Id = 1; // ID 规则类型*1000 + 顺序数
	
	
	optional int32 Type = 2; // 类型
	
	
	optional string Desc = 3; // 描述
	
	
	optional int32 MoneyType = 4; // 消耗(1金币2钻石3体力4道具)
	
	
	optional int32 Price = 5; // 消耗数值
	
	
	optional string Icon = 6; // 图标
	
	
	repeated string Reward = 7; // 奖励
	
	
	optional string Params = 8; // 切场景

}

