// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: MapEventRefreshBase
message MapEventRefreshBase
{	
	
	
	repeated TMapEventRefreshDefine TMapEventRefresh = 1; // TMapEventRefresh

}

// Defined in table: TMapEventRefresh
message TMapEventRefreshDefine
{	
	
	
	optional int32 Id = 1; // ID
	
	
	repeated string TypeRand = 2; // 事件类型
	
	
	optional int32 RangeMin = 3; // 区间起始(米)
	
	
	optional int32 RangeMax = 4; // 区间结束(米)
	
	
	optional int32 Num = 5; // 事件数量

}

